syntax = "proto3";

package qdrant;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service Snapshots {
  /*
 Create collection snapshot
  */
  rpc Create (CreateSnapshotRequest) returns (CreateSnapshotResponse) {}
  /*
  List collection snapshots
   */
  rpc List (ListSnapshotsRequest) returns (ListSnapshotsResponse) {}
  /*
  Delete collection snapshot
   */
  rpc Delete (DeleteSnapshotRequest) returns (DeleteSnapshotResponse) {}
  /*
  Create full storage snapshot
  */
  rpc CreateFull (CreateFullSnapshotRequest) returns (CreateSnapshotResponse) {}
  /*
  List full storage snapshots
   */
  rpc ListFull (ListFullSnapshotsRequest) returns (ListSnapshotsResponse) {}
  /*
  Delete full storage snapshot
   */
  rpc DeleteFull (DeleteFullSnapshotRequest) returns (DeleteSnapshotResponse) {}
  /*
  Create shard snapshot
   */
  rpc CreateShard (CreateShardSnapshotRequest) returns (CreateSnapshotResponse) {}
  /*
  List shard snapshots
   */
  rpc ListShard (ListShardSnapshotsRequest) returns (ListSnapshotsResponse) {}
  /*
  Delete shard snapshot
   */
  rpc DeleteShard (DeleteShardSnapshotRequest) returns (DeleteSnapshotResponse) {}
  /*
  Recover shard snapshot
   */
  rpc RecoverShard (RecoverShardSnapshotRequest) returns (RecoverSnapshotResponse) {}
}

message CreateFullSnapshotRequest {}

message ListFullSnapshotsRequest {}

message DeleteFullSnapshotRequest {
  string snapshot_name = 1; // Name of the full snapshot
}

message CreateSnapshotRequest {
  string collection_name = 1; // Name of the collection
}

message ListSnapshotsRequest {
  string collection_name = 1; // Name of the collection
}

message DeleteSnapshotRequest {
  string collection_name = 1; // Name of the collection
  string snapshot_name = 2; // Name of the collection snapshot
}

message CreateShardSnapshotRequest {
  string collection_name = 1; // Name of the collection
  uint32 shard_id = 2; // Id of the shard
}

message ListShardSnapshotsRequest {
  string collection_name = 1; // Name of the collection
  uint32 shard_id = 2; // Id of the shard
}

message DeleteShardSnapshotRequest {
  string collection_name = 1; // Name of the collection
  uint32 shard_id = 2; // Id of the shard
  string snapshot_name = 3; // Name of the shard snapshot
}

message RecoverShardSnapshotRequest {
  string collection_name = 1; // Name of the collection
  uint32 shard_id = 2; // Id of the shard
  ShardSnapshotLocation snapshot_location = 3; // Location of the shard snapshot
  SnapshotPriority snapshot_priority = 4; // Priority of the shard snapshot
}

message ShardSnapshotLocation {
  oneof location {
    string url = 1; // URL of the remote shard snapshot
    string path = 2; // Path of the local shard snapshot
  }
}

enum SnapshotPriority {
    SnapshotPriorityNoSync = 0; // Restore snapshot without *any* additional synchronization
    SnapshotPrioritySnapshot = 1; // Prefer snapshot data over the current state
    SnapshotPriorityReplica = 2; // Prefer existing data over the snapshot
}

message SnapshotDescription {
  string name = 1; // Name of the snapshot
  google.protobuf.Timestamp creation_time = 2; // Creation time of the snapshot
  int64 size = 3; // Size of the snapshot in bytes
}

message CreateSnapshotResponse {
  SnapshotDescription snapshot_description = 1;
  double time = 2; // Time spent to process
}

message ListSnapshotsResponse {
  repeated SnapshotDescription snapshot_descriptions = 1;
  double time = 2; // Time spent to process
}

message DeleteSnapshotResponse {
  double time = 1; // Time spent to process
}

message RecoverSnapshotResponse {
  double time = 1; // Time spent to process
}
